# clustereval

./: .install.sh  Cargo.toml  LICENSE  MANIFEST.in  Notes.md  README.md  py_version.py  pyproject.toml  setup.py
analysis/: Snakefile  cluster.json  ideal_examples_for_metrics.Rmd  report.Rmd  simulation_exps.ipynb
analysis/scripts/: make_raw_data.R
clustereval/: __init__.py  analyze_metrics.py  api2cluster.py  cluster.py  metrics.py  purity.py  stability.py
docs/source/: clustereval.rst  conf.py  index.rst  intro.md  modules.rst
pytest/: test_clust.py  test_rustlib.py
rust-bindings/: Cargo.toml
rust-bindings/src/: main.rs
src/: lib.rs
