[package]
name = "clustereval"
version = "0.1.0"
authors = ["swamyvs <swamyvinny@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15"
rayon = "1.5.0"
flate2 = "1.0"
glob = "0.3.0"
pyo3 = { version = "0.13.2", features = ["extension-module"] }

[lib]
name = "clustereval"
crate-type = ["cdylib"]
